0.0.2
Home, Up buttons now fill in location bar as well.
Entering non-existant folder path in location bar now does nothing.
Arrow key and return now work as expected on location entry completion.
Location completion added.
Location bar added.
Home button added.
Up button added.
Basic functionality.

0.0.1
First commit.