@@ -1,4 +1,5 @@
 0.0.2
+Added symlink and broken link emblems to icons.
 Home, Up buttons now fill in location bar as well.
 Entering non-existant folder path in location bar now does nothing.
 Arrow key and return now work as expected on location entry completion.
